feat: restructure project with TypeScript serverless architecture
- Remove default handler.js file
- Add TypeScript configuration with strict settings
- Implement layered architecture with controllers, functions, types, and utils
- Add SignIn and SignUp controllers with basic authentication flow
- Configure serverless.yml for AWS Lambda with esbuild optimization
- Add HTTP utilities for response handling
- Implement event parsing utilities for API Gateway
- Add TypeScript development dependencies (@types/aws-lambda, @types/node)
- Set up individual packaging and minification for functions

--- a/serverless.yml
+++ b/serverless.yml
@@ -7,9 +7,17 @@ provider:
   runtime: nodejs22.x
   architecture: arm64
 
+package:
+  individually: true
+
+build:
+  esbuild:
+    minify: true
+    sourcemap: false
+  
 functions:
-  hello:
-    handler: handler.hello
+  signin:
+    handler: src/signin.handler
     events:
       - httpApi:
           path: /
