config: update serverless configuration for API endpoints
- Add serverless-offline plugin to plugins list
- Update function handlers to use src/functions/ directory structure
- Configure signin and signup endpoints with POST methods
- Set proper API paths (/signin and /signup) for authentication routes

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,9 @@
 org: idouglas
 service: foodiary-api
 
+plugins:
+  - serverless-offline
+
 provider:
   name: aws
   region: us-east-1
@@ -17,8 +20,15 @@ build:
   
 functions:
   signin:
-    handler: src/signin.handler
+    handler: src/functions/signin.handler
     events:
       - httpApi:
-          path: /
-          method: get
+          path: /signin
+          method: POST
+
+  signup:
+    handler: src/functions/signup.handler
+    events:
+      - httpApi:
+          path: /signup
+          method: POST
