--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@types/node": "^24.2.0",
     "serverless-offline": "^14.4.0",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "zod": "^4.1.5"
   }
 }
