deps: add database and development dependencies
- Add @neondatabase/serverless ^1.0.1 for Neon database connectivity
- Add drizzle-orm ^0.44.5 for type-safe database operations
- Add drizzle-kit ^0.31.4 for database schema management and migrations
- Add tsx ^4.20.5 for TypeScript execution in development
- Update package-lock.json with new dependencies and their transitive deps

--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.152",
     "@types/node": "^24.2.0",
+    "drizzle-kit": "^0.31.4",
     "serverless-offline": "^14.4.0",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
+    "drizzle-orm": "^0.44.5",
     "zod": "^4.1.5"
   }
 }
