config: add getMealById route to serverless configuration
- Add new HTTP API endpoint GET /meals/{mealId}
- Configure Lambda function handler mapping
- Enable parameterized route for meal ID retrieval

--- a/serverless.yml
+++ b/serverless.yml
@@ -52,3 +52,9 @@ functions:
       - httpApi:
           method: GET
           path: /meals
+  getMealById:
+    handler: src/functions/getMealById.handler
+    events:
+      - httpApi:
+          method: GET
+          path: /meals/{mealId}
